--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <mybatis-plus-version>3.4.0</mybatis-plus-version>
         <thymeleaf-extras-shiro-version>2.0.0</thymeleaf-extras-shiro-version>
         <fastjson-version>1.2.73</fastjson-version>
+        <swagger-version>3.0.0</swagger-version>
     </properties>
 
     <dependencies>
@@ -93,6 +94,12 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>${fastjson-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.battcn</groupId>
+            <artifactId>swagger-spring-boot-starter</artifactId>
+            <version>2.1.5-RELEASE</version>
         </dependency>
 
         <dependency>
