--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,10 +1,13 @@
 spring:
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    driverClassName: com.mysql.cj.jdbc.Driver
+    driverClassName: com.p6spy.engine.spy.P6SpyDriver
     #druid连接池配置
     druid:
-     url: jdbc:mysql://81.68.92.240:3306/fund_trade?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=UTC
+     url: jdbc:p6spy:mysql://81.68.92.240:3306/fund_trade?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=UTC
      username: root
      password: 314159
      initial-size: 10
@@ -43,26 +46,16 @@ mybatis-plus:
     #实体扫描，多个package用逗号或者分号分隔
     typeAliasesPackage: com.zw.ft.modules.*.entity
     global-config:
-        #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
-        id-type: 0
-        #字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
-        field-strategy: 2
-        #驼峰下划线转换
-        db-column-underline: true
-        #刷新mapper 调试神器
-        refresh-mapper: true
-        #数据库大写下划线转换
-        #capital-mode: true
-        #序列接口实现类配置
-        #key-generator: com.baomidou.mybatisplus.incrementer.OracleKeyGenerator
-        #逻辑删除配置
-        logic-delete-value: -1
-        logic-not-delete-value: 0
-        #自定义填充策略接口实现
-        #meta-object-handler: com.baomidou.springboot.xxx
         db-config:
             table-underline: true
+            #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
+            id-type: 0
+            #逻辑删除配置
+            logic-delete-field: DELETED
+            logic-delete-value: 1
+            logic-not-delete-value: 0
     configuration:
+        #驼峰下划线转换
         map-underscore-to-camel-case: true
         cache-enabled: false
         call-setters-on-nulls: true
