--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,7 @@
 spring:
-    swagger:
-        enabled: false
+    thymeleaf:
+        prefix: classpath:/templates/
+        suffix: .html
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
         driverClassName: com.mysql.cj.jdbc.Driver
@@ -40,3 +41,21 @@ spring:
                 wall:
                     config:
                         multi-statement-allow: true
+mybatis-plus:
+    mapper-locations: classpath:mapper/**/*.xml
+    #实体扫描，多个package用逗号或者分号分隔
+    typeAliasesPackage: com.zw.ft.modules.*.entity
+    global-config:
+        db-config:
+            table-underline: true
+            #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
+            id-type: 0
+            #逻辑删除配置
+            logic-delete-field: DELETED
+            logic-delete-value: 1
+            logic-not-delete-value: 0
+    configuration:
+        #驼峰下划线转换
+        map-underscore-to-camel-case: true
+        cache-enabled: false
+        call-setters-on-nulls: true
