--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -49,7 +49,7 @@ mybatis-plus:
         db-config:
             table-underline: true
             #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
-            id-type: 0
+            id-type: auto
             #逻辑删除配置
             logic-delete-field: DELETED
             logic-delete-value: 1
