--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
         <mybatis-plus-version>3.4.0</mybatis-plus-version>
         <thymeleaf-extras-shiro-version>2.0.0</thymeleaf-extras-shiro-version>
         <fastjson-version>1.2.73</fastjson-version>
-        <swagger-version>3.0.0</swagger-version>
         <p6spy-version>3.9.1</p6spy-version>
     </properties>
 
@@ -121,11 +120,11 @@
             <version>${fastjson-version}</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.battcn</groupId>
             <artifactId>swagger-spring-boot-starter</artifactId>
             <version>2.1.5-RELEASE</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
