--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,8 @@
         <thymeleaf-extras-shiro-version>2.0.0</thymeleaf-extras-shiro-version>
         <fastjson-version>1.2.73</fastjson-version>
         <p6spy-version>3.9.1</p6spy-version>
-        <lombok.version>1.18.4</lombok.version>
+        <lombok-version>1.18.4</lombok-version>
+        <dynamic-version>3.2.1</dynamic-version>
     </properties>
 
     <dependencies>
@@ -135,7 +136,20 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
+            <version>${lombok-version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.baomidou/dynamic-datasource-spring-boot-starter -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>${dynamic-version}</version>
+        </dependency>
+
+        <!-- 不造为啥 dynamic-datasource-spring-boot-starter 会依赖这个 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-actuator</artifactId>
         </dependency>
 
         <dependency>
