--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,13 @@ server :
       min-spare: 5
 
 spring :
+  redis:
+    host: localhost
+    port: 6379
+    timeout: 10000
+    jedis:
+      pool:
+        time-between-eviction-runs: 60000
   # 环境 dev|prod
   profiles :
     active : dev
