--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,7 +9,7 @@ spring:
         druid:
             url: jdbc:mysql://192.168.3.222:3306/fund_trade?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=UTC
             username: root
-            password: 314159
+            password: !111qqq666
             initial-size: 10
             # 最大连接数
             max-active: 50
