增加打印日志

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,8 @@ server:
             min-spare: 5
 
 spring:
+    application:
+        name: fund_trade
     # 环境 dev|prod
     profiles:
         active: dev
