--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -37,3 +37,7 @@ mybatis-plus:
         map-underscore-to-camel-case: true
         cache-enabled: false
         call-setters-on-nulls: true
+logging:
+    config: classpath:logback-spring.xml
+    file:
+        path: D:\logs
