--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,46 +1,24 @@
 spring:
+    redis:
+        host: 192.168.3.222
+        port: 6379
+        timeout: 10000
+        jedis:
+            pool:
+                time-between-eviction-runs: 60000
     thymeleaf:
         prefix: classpath:/templates/
         suffix: .html
     datasource:
-        type: com.alibaba.druid.pool.DruidDataSource
-        driverClassName: com.mysql.cj.jdbc.Driver
-        #druid连接池配置
-        druid:
-            url: jdbc:mysql://192.168.3.222:3306/fund_trade?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=UTC
-            username: root
-            password: '!111qqq666'
-            initial-size: 10
-            # 最大连接数
-            max-active: 50
-            #最小连接数
-            min-idle: 10
-            #获取连接等待超时时间
-            max-wait: 5000
-            pool-prepared-statements: true #是否缓存preparedStatement，也就是PSCache。PSCache对支持游标的数据库性能提升巨大，比如说oracle。在mysql下建议关闭。
-            max-pool-prepared-statement-per-connection-size: 20
-            validation-query: SELECT 1 FROM DUAL
-            validation-query-timeout: 20000
-            test-on-borrow: false #申请连接时执行validationQuery检测连接是否有效，做了这个配置会降低性能。
-            test-on-return: false #归还连接时执行validationQuery检测连接是否有效，做了这个配置会降低性能。
-            test-while-idle: true #建议配置为true，不影响性能，并且保证安全性。申请连接的时候检测，如果空闲时间大于timeBetweenEvictionRunsMillis，执行validationQuery检测连接是否有效。
-            time-between-eviction-runs-millis: 60000 #配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-            min-evictable-idle-time-millis: 300000  #一个连接在池中最小生存的时间，单位是毫秒
-            #StatViewServlet配置。（因为暴露的监控信息比较敏感，支持密码加密和访问ip限定）
-            stat-view-servlet:
-                enabled: true
-                url-pattern: /druid/*
-                #可以增加访问账号密码【去掉注释就可以】
-                #login-username: admin
-                #login-password: admin
-            filter:
-                stat:
-                    log-slow-sql: true
-                    slow-sql-millis: 1000
-                    merge-sql: true
-                wall:
-                    config:
-                        multi-statement-allow: true
+        dynamic:
+            primary: fundTrade #设置默认的数据源或者数据源组,默认值即为master
+            strict: false #设置严格模式,默认false不启动. 启动后在未匹配到指定数据源时候会抛出异常,不启动则使用默认数据源.
+            datasource:
+                fundTrade:
+                    url: jdbc:p6spy:mysql://192.168.3.222:3306/fund_trade?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=UTC
+                    username: root
+                    password: 'dgdB20I5!@#'
+                    driver-class-name: com.p6spy.engine.spy.P6SpyDriver # 3.2.0开始支持SPI可省略此配置
 mybatis-plus:
     mapper-locations: classpath:mapper/**/*.xml
     #实体扫描，多个package用逗号或者分号分隔
@@ -49,7 +27,7 @@ mybatis-plus:
         db-config:
             table-underline: true
             #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
-            id-type: 0
+            id-type: auto
             #逻辑删除配置
             logic-delete-field: DELETED
             logic-delete-value: 1
@@ -59,3 +37,7 @@ mybatis-plus:
         map-underscore-to-camel-case: true
         cache-enabled: false
         call-setters-on-nulls: true
+logging:
+    config: classpath:logback-spring.xml
+    file:
+        path: /home/Java/fund_trade/logs
